Refactor map styles into folder

--- a/StopAndSearch.html
+++ b/StopAndSearch.html
@@ -61,7 +61,7 @@
                     <script>
                         var map1 = new maplibregl.Map({
                             container: 'map1',
-                            style: 'style.json',
+                            style: 'styles/map/base.json',
                             center: [-4, 54.5],
                             zoom: 4.3,
                         })
